--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/common.css">
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/syntax.css">
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/mypost.css">
-		<link rel="icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
 		<script type="text/javascript" src="{{site.baseurl}}{{site.jsurl}}/common.js"></script>
 		<script type="text/javascript" src="{{site.baseurl}}{{site.jsurl}}/header.js"></script>
 		<title>{{ page.title }}</title>
