--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<link rel="icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
 
 		{% for css in page.css %}
 			<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/{{ css }}">
