--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-    <a class="logo" href="{{ site.baseurl }}" title="英目花盗的Blog"></a>
+    <a class="logo" href="{{ site.baseurl }}" title="{{ site.description }}"></a>
     <div class="title"><a href="{{ site.baseurl }}" class="nav-a">{{ site.title }}</a></div>
     <nav class="nav" id="nav">
         <ul>
