--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,5 @@
-<footer>Copyright ©2019 <a href="{{site.baseurl}}">{{ site.title }}</a> Powered by <a href="http://jekyll.com.cn/">jekyll</a></footer>
+<footer>
+	项目地址： <a href="https://github.com/dyfself/ymhdBlog" target="_blank">github</a>
+	<a href="https://dev.tencent.com/u/yingmhd/p/ymhdBlog/git" target="_blank">coding</a><br/>
+	Copyright ©2019 <a href="{{site.baseurl}}">{{ site.title }}</a> Powered by <a href="http://jekyll.com.cn/">jekyll</a>
+</footer>
