--- a/static/css/common.css
+++ b/static/css/common.css
@@ -19,10 +19,9 @@ body {
 .main-content {
     min-height: 100%;
     margin: 0 auto;
-    padding-top: 5.4em;
-    margin-top: -3.4em;
-    padding-bottom: 60px;
-    margin-bottom: -40px;
+    padding-top: 4em;
+    padding-bottom: 80px;
+    margin-bottom: -60px;
 }
 
 @media screen and (min-width: 800px) {
@@ -34,15 +33,22 @@ body {
     .main-content {
         width: 100%;
     }
+    #articlelist .type-head {
+        padding-left: 20px;
+    }
 }
 
 /*头部样式*/
 #header {
     height: 3.4em;
     padding: 0 2em;
-    /*background-color: #2c9678;*/
     background-color: #45b787;
     color: #191818;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
 }
 
 #header .logo {
@@ -175,7 +181,7 @@ body {
 
 /*底部样式*/
 footer{
-    height: 40px;
+    height: 60px;
     line-height: 30px;
     color: #888;
     font-size: 13px;
@@ -219,16 +225,18 @@ footer a{
 }
 
 #articlelist li time{
-    color: #666;
+    color: #999;
     font-size: 14px;
 }
 
 #articlelist li>a{
-    color: #111;
+    color: #666;
     word-wrap: break-word;
     font-size: 14px;
 }
-
+#articlelist li>a:hover {
+    color: #2c9678;
+}
 #articlelist li span>a{
     font-size: 12px;
     text-decoration: none;
