--- a/static/css/software.css
+++ b/static/css/software.css
@@ -3,6 +3,7 @@
 	width: 0;
 	height: 0;
 	clear: both;
+	display: block;
 }
 #softwareList ul li {
 	list-style: none;
@@ -14,8 +15,7 @@
     width: 100%;
 	height: 70px;
 	display: block;
-	padding-left: 70px;
-	padding-top: 8px;
+	padding: 10px 5px 0 70px;
 	position: relative;
 	text-decoration: none;
 	/*box-shadow: 0px 0px 5px #888888;*/
@@ -23,6 +23,7 @@
     /*background-color: #FAFAFA;*/
     border: 1px solid #ccc;
     color: #666;
+    font-size: 14px;
 }
 #softwareList ul li a:hover {
 	border-color: #45b787;
