--- a/static/css/common.css
+++ b/static/css/common.css
@@ -60,8 +60,11 @@ body {
     background:url("../img/logo.jpg") ;
     background-size: cover;
     margin-top: .7em;
+    transition: all .5s ease-in-out;
 }
-
+#header .logo:hover {
+    transform: rotateZ(360deg);
+}
 #header .title{
     display: none;
     line-height: 3.4em;
