--- a/static/css/software.css
+++ b/static/css/software.css
@@ -31,7 +31,8 @@
 }
 #softwareList ul li a img {
 	width: 50px;
-	height: 50px;
+	height: auto;
+	max-height: 50px;
 	display: block;
 	position: absolute;
 	left: 10px;
