--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/mypost.css">
 		<link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
 		<script type="text/javascript" src="{{site.baseurl}}{{site.jsurl}}/header.js"></script>
+		<!-- <script type="text/javascript" src="{{site.baseurl}}{{site.jsurl}}/common.js"></script> -->
 		<title>{{ page.title }}</title>
 	</head>
 <body>
@@ -23,5 +24,6 @@
 		</div>
 	</div>
 {% include footer.html %}
+<script type="text/javascript" src="//github.atool.org/canvas-nest.min.js"></script>
 </body>
 </html>
