--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
+		<meta name="google-site-verification" content="tzWwQdgHYdn1m6bNUHk15jTzVRE6-rOibOwl2hS_zUE" />
 
 		{% for css in page.css %}
 			<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/{{ css }}">
