--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<meta name="google-site-verification" content="tzWwQdgHYdn1m6bNUHk15jTzVRE6-rOibOwl2hS_zUE" />
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/common.css">
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/syntax.css">
 		<link rel="stylesheet" href="{{site.baseurl}}{{site.cssurl}}/mypost.css">
