--- a/static/css/common.css
+++ b/static/css/common.css
@@ -8,7 +8,7 @@ html,
 body {
     font: 400 16px/1.7 "Microsoft JhengHei", sans-serif;
     height: 100%;
-    color: #444;
+    color: #501B15;
 }
 
 ::selection{
